# wasm-runner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci_build_test.yml
src/: main.rs
test-wasm/: Cargo.toml  README.md
test-wasm/.cargo/: config.toml
test-wasm/src/: main.rs
